--- a/.verb.md
+++ b/.verb.md
@@ -35,8 +35,20 @@ git clone https://github.com/metisadmin/{%= name %}.git
 cd {%= name %}
 npm install
 bower install
-broccoli serve
+npm start
 ```
+
+### Building
+
+```bash
+npm install -g broccoli-cli
+git clone https://github.com/metisadmin/{%= name %}.git
+cd {%= name %}
+npm install
+bower install
+npm run build
+```
+
 ## Author
 {%= include("authors", {
   authors: [
