--- a/.verb.md
+++ b/.verb.md
@@ -35,7 +35,7 @@ git clone https://github.com/metisadmin/{%= name %}.git
 cd {%= name %}
 npm install
 bower install
-npm start
+BROCCOLI_ENV=development broccoli serve
 ```
 
 ### Building
@@ -45,7 +45,6 @@ npm install -g broccoli-cli
 git clone https://github.com/metisadmin/{%= name %}.git
 cd {%= name %}
 npm install
-bower install
 npm run build
 ```
 
